// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScansContext should apply a hook for retrieving data from multiple selectors: selector responses 1`] = `
{
  "errorResponse": {
    "data": [],
    "date": undefined,
    "error": true,
    "errorMessage": "Lorem ipsum",
    "expandedRows": undefined,
    "fulfilled": undefined,
    "hasData": false,
    "pending": undefined,
    "selectedRows": undefined,
    "totalResults": 0,
  },
  "fulfilledResponse": {
    "data": [
      "dolor",
      "sit",
    ],
    "date": undefined,
    "error": undefined,
    "errorMessage": undefined,
    "expandedRows": undefined,
    "fulfilled": true,
    "hasData": false,
    "pending": undefined,
    "selectedRows": undefined,
    "totalResults": 0,
  },
  "mockStoreSuccessResponse": {
    "data": [
      "lorem",
      "ipsum",
    ],
    "date": undefined,
    "error": false,
    "errorMessage": null,
    "expandedRows": {},
    "fulfilled": true,
    "hasData": false,
    "pending": false,
    "selectedRows": {},
    "totalResults": 0,
  },
  "pendingResponse": {
    "data": [],
    "date": undefined,
    "error": undefined,
    "errorMessage": undefined,
    "expandedRows": undefined,
    "fulfilled": undefined,
    "hasData": false,
    "pending": true,
    "selectedRows": undefined,
    "totalResults": 0,
  },
}
`;

exports[`ScansContext should apply a hook for returning a get response: get responses 1`] = `
{
  "errorResponse": {
    "error": true,
    "message": "Lorem ipsum",
  },
  "fulfilledResponse": {
    "data": {
      "view": {
        "results": [
          "dolor",
          "sit",
        ],
      },
    },
    "fulfilled": true,
  },
  "mockStoreSuccessResponse": {
    "data": [
      "lorem",
      "ipsum",
    ],
    "date": undefined,
    "error": false,
    "errorMessage": null,
    "expandedRows": {},
    "fulfilled": true,
    "hasData": false,
    "pending": false,
    "selectedRows": {},
    "totalResults": 0,
  },
  "pendingResponse": {
    "pending": true,
  },
}
`;

exports[`ScansContext should attempt to poll scans: timeout 1`] = `
[
  [
    {
      "callback": false,
      "interval": 0,
    },
  ],
  [
    {
      "callback": false,
      "interval": 0,
    },
  ],
]
`;

exports[`ScansContext should handle deleting a scan with a confirmation: dispatch onDelete 1`] = `
[
  [
    {
      "body": undefined,
      "confirmButtonText": "t(form-dialog.label, {"context":"delete"})",
      "heading": "t(form-dialog.confirmation_heading, {"context":"delete-scan","count":1,"name":"lorem ipsum name"}, [object Object])",
      "onConfirm": [Function],
      "title": "t(form-dialog.confirmation_title, {"context":"delete-scan","count":1})",
    },
  ],
]
`;

exports[`ScansContext should handle scan actions with multiple callbacks: callbacks 1`] = `
{
  "onCancel": [Function],
  "onDownload": [Function],
  "onDownloadJob": [Function],
  "onPause": [Function],
  "onRestart": [Function],
  "onStart": [Function],
}
`;

exports[`ScansContext should handle scan actions with multiple callbacks: dispatch onStart 1`] = `
[
  [
    {
      "meta": {
        "id": "lorem ipsum base id",
      },
      "payload": Promise {},
      "type": "START_SCAN",
    },
  ],
]
`;

exports[`ScansContext should return specific properties: specific properties 1`] = `
{
  "INITIAL_QUERY": {
    "ordering": "name",
    "page": 1,
    "page_size": 10,
    "scan_type": "inspect",
  },
  "VIEW_ID": "scans",
  "useGetScans": [Function],
  "useOnDelete": [Function],
  "useOnExpand": [Function],
  "useOnScanAction": [Function],
  "useOnSelect": [Function],
  "usePoll": [Function],
  "useScans": [Function],
}
`;
